[package]
name = "candle-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
byteorder = { workspace = true }
candle-kernels = { workspace = true, optional = true }
candle-metal-kernels = { workspace = true, optional = true }
objc2-metal = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true }
cudarc = { workspace = true, optional = true }
gemm = { workspace = true }
half = { workspace = true }
float8 = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
libm = { workspace = true }
memmap2 = { workspace = true }
num-traits = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
thiserror = { workspace = true }
yoke = { workspace = true }
zip = { workspace = true }
tokenizers = { workspace = true, features = ["onig"] }

#Wgpu Dependencies:
#wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
tracing = {workspace = true, optional = true, features = ["release_max_level_off"]}

pollster = { workspace = true, optional = true }
candle-wgpu-kernels = { workspace = true, optional = true }
wgpu-compute-layer = { workspace = true, optional = true }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios")))'.dependencies]
candle-ug = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
criterion = { workspace = true }

[features]
default = []
cuda = ["cudarc", "dep:candle-kernels", "candle-ug?/cuda"]
cudnn = ["cuda", "cudarc/cudnn"]
nccl = ["cuda", "cudarc/nccl"]
mkl = ["dep:libc", "dep:intel-mkl-src"]
accelerate = ["dep:libc", "dep:accelerate-src"]
metal = [
    "dep:objc2-metal",
    "dep:objc2-foundation",
    "dep:candle-metal-kernels",
    "candle-ug?/metal",
]
ug = ["dep:candle-ug"]
wgpu = [
    "dep:bytemuck",
    "dep:tracing",
    "dep:pollster",
    "dep:candle-wgpu-kernels",
    "dep:wgpu-compute-layer",
]
wgpu_debug = [
    "wgpu",
    "candle-wgpu-kernels/wgpu_debug_serialize",
    "wgpu-compute-layer/wgpu_debug",
]
wgpu_debug_serialize = [
    "wgpu",
    "candle-wgpu-kernels/wgpu_debug_serialize",
    "wgpu-compute-layer/wgpu_debug_serialize",
]

[[bench]]
name = "bench_main"
harness = false

[[example]]
name = "metal_basics"
required-features = ["metal"]

[[example]]
name = "cuda_basics"
required-features = ["cuda"]


[[example]]
name = "wgpu_basics"
required-features = ["wgpu"]
