[package]
name = "candle-flashinfer-kernels"
version = "0.11.0"
edition = "2021"

description = "Optional FlashInfer-style single-token decode attention kernel for the candle ML framework."
repository = "https://github.com/huggingface/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
candle = { path = "../candle-core", default-features = false, package = "candle-core", version = "0.11.0" }
half = { version = "2.3.1", features = ["num-traits"] }
rayon = "1.7"
candle-metal-kernels = { path = "../candle-metal-kernels", version = "0.11.0", optional = true }
objc2-metal = { version = "0.3.2", optional = true }

[build-dependencies]
cudaforge = { version = "0.1.2", optional = true }
anyhow = { version = "1", features = ["backtrace"] }

[features]
default = []
# Compiles and links the CUDA decode-attention kernel and enables the GPU forward
# pass. Without it the crate builds CPU-only and uses the reference `cpu_fwd`.
cuda = ["dep:cudaforge", "candle/cuda"]
# Compiles (at runtime) and runs the Metal decode-attention kernel on Apple Silicon.
metal = ["candle/metal", "dep:candle-metal-kernels", "dep:objc2-metal"]

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
