[package]
name = "candle-gptq-kernels"
version = "0.10.2"
edition = "2021"

description = "Fused dequantize+GEMM CUDA kernel for GPTQ-quantized linear layers, for the candle ML framework."
repository = "https://github.com/huggingface/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]
candle = { path = "../candle-core", package = "candle-core", version = "0.10.2" }
half = { version = "2.5.0", features = ["num-traits"] }
candle-metal-kernels = { path = "../candle-metal-kernels", version = "0.10.2", optional = true }
objc2-metal = { version = "0.3.2", optional = true }

[features]
default = ["cuda"]
# Fused dequant+GEMM CUDA kernels (GPTQ scalar/tensor-core + vendored Marlin FFI).
cuda = ["candle/cuda"]
# Fused dequant+GEMM Metal kernel (GPTQ scalar tiled GEMM) for Apple Silicon.
metal = ["candle/metal", "dep:candle-metal-kernels", "dep:objc2-metal"]

[build-dependencies]
cudaforge = "0.1.2"
anyhow = { version = "1", features = ["backtrace"] }

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
candle-nn = { path = "../candle-nn" }
