[package]
name = "candle-hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
rand = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["json"] }
tokio = { workspace = true, features = ["fs"], optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }
num_cpus = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
sha256 = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tokio-test = { workspace = true }

[features]
default = ["online"]
online = ["reqwest/blocking", "dep:serde", "dep:serde_json", "dep:indicatif", "dep:num_cpus"]
tokio = ["online", "dep:tokio", "dep:futures"]
