[package]
name = "candle-kernels-flash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
glob = "0.3.1"
rayon = "1.7.0"
candle-kernels-build = { path = "../candle-kernels-build" }
