[package]
name = "candle-kernels"
version = "0.1.0"
edition = "2021"

description = "CUDA kernels for Candle"
repository = "https://github.com/LaurentMazare/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT/Apache-2.0"

[dependencies]

[build-dependencies]
candle-kernels-build = { path = "../candle-kernels-build" }
